# code

./: .gitattributes  .gitmodules  .travis.yml  Makefile  README.md  composer.json  laravel_symfony_route.php
aliyun/: README.md
c/nginx-1.16.0/tests/cmake/1.helloworld/: .gitignore  CMakeLists.txt  tutorial.c
c/nginx-1.16.0/tests/cmake/1.helloworld/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.c
c/socket/: .gitignore  CMakeLists.txt  README.md  config.h.cmake  run.sh
c/socket/chapter-4/: CMakeLists.txt  make_socket.c
c/socket/redis/: CMakeLists.txt  README.md  clean.sh  run.sh
c/socket/redis/core/data/dictionary/: CMakeLists.txt  README.md  dictionary.c  dictionary.h  main.c
c/socket/redis/core/data/list/: list.c  list.h
c/socket/redis/core/data/list/skiplist/: skiplist.c  skiplist.h
c/socket/redis/core/data/sds/: sds.c  sds.h
c/socket/redis/core/data/sortedset/: README.md
c/socket/redis/dictionary/: dictionary.h
c/socket/redis/include/: config.h
c/socket/test/: CMakeLists.txt  pointer.c
go/k8s/bpf/tengine/: .gitignore  CMakeLists.txt  Makefile  health_check.md  lua文档.md  nginx-https.conf  nginx-tcp.conf  requirements.txt  settings.json
go/k8s/bpf/tengine/docs/: http_server.md
go/k8s/bpf/tengine/docs/imgs/include/: 容器存储.plantuml
go/k8s/bpf/tengine/openresty/: Makefile
go/k8s/bpf/tengine/openresty/conf/: nginx.conf
go/k8s/bpf/tengine/openresty/lua/: hello.lua
go/k8s/bpf/tengine/src/core/: nginx.c  nginx.h  ngx_array.c  ngx_array.h  ngx_auto_config.h  ngx_buf.c  ngx_conf_file.c  ngx_conf_file.h  ngx_config.h  ngx_connection.c  ngx_connection.h  ngx_core.h  ngx_cpuinfo.c  ngx_crc32.c  ngx_cycle.c  ngx_cycle.h  ngx_file.c  ngx_hash.c  ngx_inet.c  ngx_inet.h  ngx_list.c  ngx_log.c  ngx_module.c  ngx_module.h  ngx_modules.c  ngx_open_file_cache.h  ngx_palloc.c  ngx_parse.c  ngx_parse_time.c  ngx_proxy_protocol.c  ngx_proxy_protocol.h  ngx_rbtree.c  ngx_regex.c  ngx_resolver.c  ngx_rwlock.c  ngx_shmtx.c  ngx_slab.c  ngx_string.c  ngx_times.c
go/k8s/bpf/tengine/src/event/: ngx_event.c  ngx_event.h  ngx_event_accept.c  ngx_event_connect.c  ngx_event_openssl.c  ngx_event_openssl_stapling.c  ngx_event_posted.c  ngx_event_posted.h  ngx_event_timer.c  ngx_event_timer.h  ngx_event_udp.c  ngx_event_udp.h
go/k8s/bpf/tengine/src/event/modules/: epoll_test.c  ngx_epoll_module.c  ngx_kqueue_module.c
go/k8s/bpf/tengine/src/http/: ngx_http.c
go/k8s/bpf/tengine/src/os/unix/: ngx_alloc.c  ngx_channel.c  ngx_darwin_config.h  ngx_darwin_init.c  ngx_darwin_sendfile_chain.c  ngx_dlopen.c  ngx_errno.c  ngx_files.c  ngx_pipe.c  ngx_pipe.h  ngx_posix_init.c  ngx_process.c  ngx_process_cycle.c  ngx_readv_chain.c  ngx_recv.c  ngx_send.c  ngx_setproctitle.c  ngx_shmem.c  ngx_socket.c  ngx_time.c  ngx_udp_recv.c  ngx_udp_send.c  ngx_udp_sendmsg_chain.c  ngx_writev_chain.c
go/k8s/bpf/tengine/src/stream/: ngx_stream.c  ngx_stream.h  ngx_stream_core_module.c  ngx_stream_handler.c  ngx_stream_log_module.c  ngx_stream_proxy_module.c  ngx_stream_return_module.c  ngx_stream_script.c  ngx_stream_ssl_module.c  ngx_stream_ssl_preread_module.c  ngx_stream_upstream.c  ngx_stream_upstream.h  ngx_stream_upstream_round_robin.c  ngx_stream_variables.c  ngx_stream_write_filter_module.c  tcp_udp_flow.md
go/k8s/bpf/tengine/ssl/: ca-config.json  ca-csr.json  ca-key.pem  ca.csr  ca.pem  cfssl.sh  server-csr.json  server-key.pem  server.csr  server.pem  tcp_ssl_client_test.go  tls.sh
go/k8s/bpf/tengine/tcp/tcp-server/: tcp_client.py  tcp_server.py  tcp_ssl_client.py  tcp_ssl_client_test.go
go/k8s/bpf/tengine/udp/udp-server/: 16to10.py  proxy_protocol_http_server.py  proxy_protocol_tcp_server.py  udp_client.py  udp_server.py
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/: .gitignore  CMakeLists.txt  xdp-cilium-l4lb.md
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/: cilium-vxlan网络.md
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/bpf/: bpf_features.h  bpf_xdp.c  ep_config.h  init.sh  l4lb.md  netdev_config.h  node_config.h
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/bpf/lib/: common.h  config.h  conntrack.h  csum.h  dbg.h  drop.h  encap.h  endian.h  endpoints.h  eps.h  eth.h  ids.h  ipv4.h  l4.h  lb.h  lib.h  maps.h  nat.h  nodeport.h  overloadable.h  overloadable_skb.h  overloadable_xdp.h  pcap.h  static_data.h  utils.h
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/cilium/: main.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/cilium/cmd/: root.go  service.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/daemon/cmd/: daemon.go  daemon_main.go  datapath.go  metrics.go  service.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/bpf/: bpf.go  bpf_linux.go  bpffs_linux.go  map.go  map_linux.go  map_register_linux.go  metrics.go  prog.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/cidr/: cidr.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/controller/: controller.go  manager.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/datapath/: datapath.go  loader.go  node.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/defaults/: defaults.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/loadbalancer/: loadbalancer.go  zz_generated.deepcopy.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/lock/: lock.go  lock_fast.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/logging/: logging.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/maglev/: maglev.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/mtu/: mtu.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/murmur3/: murmur3.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/option/: config.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/pkg/service/: service.go  service_test.go
go/k8s/bpf/xdp-l4lb/xdp-cilium-l4lb/cilium/test/: .gitignore  CMakeLists.txt  echo-server.sh
go/k8s/network/cilium/cilium/bpf/: CMakeLists.txt  bpf_lxc.c  init.sh  node_config.h
go/k8s/network/cilium/cilium/bpf/lib/: common.h  endian.h  eps.h  maps.h  overloadable.h  overloadable_skb.h  overloadable_xdp.h  policy.h  tailcall.h  trace.h
go/k8s/network/cilium/cilium/bpf/sockops/: README.md  bpf_redirect.c  bpf_sockops.c  bpf_sockops.h
(+7348 files in other folders)
